Fix text alignment of how we do Change what-we-do to how-we-do component and remove text blocks

--- a/src/components/ml-divider/ml-divider.css
+++ b/src/components/ml-divider/ml-divider.css
@@ -1,3 +1,10 @@
+ml-divider {
+  width: 90%;
+  max-width: 600px;
+  display: block;
+  margin: 0 auto;
+  opacity: 0.5;
+}
 ml-divider .wrapper {
   width: 100%;
   margin-top: 50px;
